--- a/src/App.css
+++ b/src/App.css
@@ -432,6 +432,7 @@
     border-radius: 9999px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
     cursor: pointer;
+    margin-top: 850%;
   }
   
   .icon2__inner {
