--- a/src/App.css
+++ b/src/App.css
@@ -421,7 +421,9 @@
   
   .channel-list__sidebar__icon2 {
     width: 44px;
+    position:absolute;
     height: 44px;
+    bottom: 10px;
     margin: 14px;
     background: linear-gradient(
         150.64deg,
@@ -432,7 +434,14 @@
     border-radius: 9999px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
     cursor: pointer;
-    margin-top: 850%;
+  }
+  .channel-list__sidebar__text {
+    position:absolute;
+    bottom: 5px;
+    left: 7.5px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
   }
   
   .icon2__inner {
