--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
 :root {
     --primary-color: #76B900;
     --primary-color-alpha: #76B9001a;
+    --grey: #121212be;
+    --white: #fff;
+    --specialcolor: #4e4e4e;
   }
   
+  body.light {
+    --background-color: var(--white);
+    --special: var(--white);
+    --text-color: var(--grey);
+  }
+  
+  body.dark {
+    --background-color: var(--grey);
+    --special: var(--specialcolor);
+    --text-color: var(--white);
+  }
   html,
   body {
     margin: 0;
@@ -306,6 +320,7 @@
   .channel__container {
     height: 100%;
     width: 100%;
+    background-color: var(--background-color);
   }
   
   .str-chat__thread {
@@ -344,6 +359,7 @@
     display: flex;
     align-items: center;
     margin-left: 20px;
+    color: var(--text-color);
   }
   
   .custom-thread-header__left-title {
@@ -351,14 +367,14 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: #2c2c30;
+    color: var(--text-color);
     margin-right: 10px;
   }
   
   .custom-thread-header__left-count {
     font-family: Helvetica Neue, sans-serif;
     font-size: 14px;
-    color: #858688;
+    color: var(--text-color);
   }
   
   .close-thread-icon {
@@ -372,6 +388,7 @@
     left: initial;
     right: 100%;
     border-radius: var(--border-radius-md);
+    background-color: var(--background-color);
   }
   
   .channel-list__container {
@@ -394,22 +411,34 @@
     width: 44px;
     height: 44px;
     margin: 14px;
-    background: linear-gradient(
-        150.64deg,
-        rgba(0, 0, 0, 0.1) 12.73%,
-        rgba(0, 0, 0, 0) 89.32%
-      ),
-      #ffffff;
+    background: var(--background-color);
     border-radius: 9999px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
+    box-shadow: 0px 4px 8px rgba(250, 212, 212, 0.33);
   }
   
   .channel-list__list__wrapper {
     display: flex;
+    overflow-y: scroll;
     flex-direction: column;
     background: var(--primary-color);
     width: 240px;
   }
+
+  ::-webkit-scrollbar {
+    width: 5px;
+    
+  }
+  ::-webkit-scrollbar-track {
+    background: #76B900;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #20b818fd;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--background-color);
+  }
+  
   
   .icon1__inner {
     font-family: Helvetica Neue, sans-serif;
@@ -425,12 +454,7 @@
     height: 44px;
     bottom: 10px;
     margin: 14px;
-    background: linear-gradient(
-        150.64deg,
-        rgba(0, 0, 0, 0.1) 12.73%,
-        rgba(0, 0, 0, 0) 89.32%
-      ),
-      #ffffff;
+    background: var(--background-color);
     border-radius: 9999px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
     cursor: pointer;
@@ -439,7 +463,7 @@
     position:absolute;
     bottom: 5px;
     left: 7.5px;
-    color: white;
+    color: var(--background-color);
     font-weight: bold;
     cursor: pointer;
   }
@@ -463,7 +487,7 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 28px;
-    color: #ffffff;
+    color: var(--background-color);
   }
   
   .channel-search__container {
@@ -480,7 +504,7 @@
     justify-content: center;
     align-items: center;
     height: 40px;
-    background: rgba(255, 255, 255, 0.2);
+    background: var(--background-color);
     border-radius: 8px;
     margin-bottom: 8px;
     border: 1px solid transparent;
@@ -488,26 +512,27 @@
   }
   
   .channel-search__input__wrapper:focus-within {
-    border: 1px solid #fff;
+    border: 1px solid var(--background-color);
   }
   
   .channel-search__input__icon {
     width: 32px;
     display: flex;
     justify-content: center;
+    background-color: var(--background-color);
   }
   
   .channel-search__input__text {
     background: none;
     border: none;
-    color: #fff;
+    color: var(--text-color);
     font-family: Helvetica Neue, sans-serif;
     font-size: 16px;
     outline: none;
   }
   
   ::placeholder {
-    color: rgba(255, 255, 255, 0.66);
+    color: var(--text-color);
     white-space: nowrap;
     width: 150px;
   }
@@ -515,15 +540,15 @@
   .channel-search__results {
     position: absolute;
     height: fit-content;
-    width: 300px;
-    background: #fff;
+    width: 200px;
+    background: var(--background-color);
     border: 1px solid #e9e9ea;
     box-sizing: border-box;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
+    box-shadow: var(--background-color);
     border-radius: 8px;
-    z-index: 10;
-    left: 230px;
-    top: 16px;
+    z-index: 100;
+    left: 1px;
+    top: 55px;
   }
   
   .channel-search__results-header {
@@ -535,7 +560,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 120%;
-    color: #858688;
+    color: var(--text-color);
     margin-left: 12px;
   }
   
@@ -556,7 +581,7 @@
     height: 48px;
     display: flex;
     align-items: center;
-    background: var(--primary-color-alpha);
+    background: var(--text-color);
   }
   
   .channel-search__result-container:hover {
@@ -583,7 +608,7 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 120%;
-    color: #ffffff;
+    color: var(--text-color);
   }
   
   .channel-search__result-text {
@@ -592,7 +617,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 120%;
-    color: #2c2c30;
+    color: var(--text-color);
   }
   
   .create-channel__container {
@@ -645,7 +670,7 @@
     color: rgba(0, 0, 0, 0.5);
     height: 50px;
     width: 540px;
-    background: #f7f6f8;
+    background: var(--background-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     border-radius: 8px;
@@ -664,7 +689,7 @@
   
   .create-channel__button-wrapper {
     height: 82px;
-    background: #f7f6f8;
+    background: var(--background-color);
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -679,7 +704,7 @@
     font-weight: bold;
     font-size: 18px;
     padding: 10px 20px;
-    color: #ffffff;
+    color: var(--background-color);
     border-radius: 8px;
     cursor: pointer;
   }
@@ -701,7 +726,7 @@
     font-family: Helvetica Neue, sans-serif;
     font-size: 14px;
     line-height: 17px;
-    color: #858688;
+    color: var(--background-color);
     margin-top: 16px;
   }
   
@@ -718,7 +743,7 @@
   .user-list__message {
     font-family: Helvetica Neue, sans-serif;
     font-size: 16px;
-    color: #2c2c30;
+    color: #f7f6f8;
     margin: 20px;
   }
   
@@ -730,7 +755,7 @@
   }
   
   .user-item__wrapper:hover {
-    background: #f7f6f8;
+    background: var(--background-color);
     cursor: pointer;
   }
   
@@ -765,7 +790,7 @@
   .user-item__invite-empty {
     height: 28px;
     width: 28px;
-    background: #f7f6f8;
+    background: var(--background-color);
     border: 1px solid #dedddf;
     border-radius: 14px;
     box-sizing: border-box;
@@ -774,6 +799,8 @@
   
   .edit-channel__container {
     display: flex;
+    overflow-y: scroll;
+
     flex-direction: column;
     height: 100%;
   }
@@ -819,10 +846,10 @@
   .channel-name-input__wrapper input {
     font-family: Helvetica Neue, sans-serif;
     font-size: 18px;
-    color: rgba(0, 0, 0);
+    color: var(--text-color);
     height: 50px;
     width: 90%;
-    background: #f7f6f8;
+    background: var(--background-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     border-radius: 8px;
@@ -841,7 +868,7 @@
   
   .edit-channel__button-wrapper {
     height: 82px;
-    background: #f7f6f8;
+    background: var(--background-color);
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -854,7 +881,7 @@
     font-weight: bold;
     font-size: 18px;
     padding: 10px 20px;
-    color: #ffffff;
+    color: var(--text-color);;
     margin-right: 30px;
     border-radius: 8px;
     cursor: pointer;
@@ -867,7 +894,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    background: #ffffff;
+    background: var(--background-color);
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
     border-top-right-radius: 16px;
     z-index: 1;
@@ -880,13 +907,14 @@
   
   .team-channel-header__channel-wrapper svg {
     cursor: pointer;
+    fill: var(--text-color) !important;
   }
   
   .team-channel-header__name {
     font-family: Helvetica Neue, sans-serif;
     font-weight: bold;
     font-size: 18px;
-    color: #2c2c30;
+    color: var(--text-color);
     margin-right: 8px;
   }
   
@@ -947,12 +975,13 @@
   .team-channel-header__right svg {
     margin-left: 16px;
     margin-right: 4px;
+    color: var(--text-color);
   }
   
   .team-channel-header__right-text {
     font-family: Helvetica Neue, sans-serif;
     font-size: 14px;
-    color: #858688;
+    color: var(--text-color);
   }
   
   .team-channel-list {
@@ -962,7 +991,7 @@
   }
   
   .team-channel-list__message {
-    color: #ffffff;
+    color: var(--text-color);
     padding: 0 16px;
   }
   
@@ -1000,7 +1029,7 @@
     height: auto;
     display: flex;
     align-items: center;
-    background: rgba(0, 0, 0, 0.2);
+    background: var(--background-color);
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     font-weight: bold;
@@ -1010,7 +1039,7 @@
   }
   
   .channel-preview__wrapper:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: var(--background-color);
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     font-weight: bold;
@@ -1023,7 +1052,7 @@
     align-items: center;
     font-family: Helvetica Neue, sans-serif;
     font-size: 14px;
-    color: #ffffff;
+    color: var(--text-color);
     padding: 0px 20px;
     height: 100%;
     width: 100%;
@@ -1063,7 +1092,7 @@
   }
   
   .str-chat__message-team:hover {
-    background: #e9e9ea;
+    background: var(--background-color);
   }
   
   .str-chat__message-team-group {
@@ -1077,13 +1106,12 @@
     font-style: normal;
     font-weight: normal;
     line-height: 120%;
-    color: #000000;
+    color: var(--text-color);
     margin: 0;
-    background: none;
   }
   
   .str-chat__message-team:hover .str-chat__message-team-content {
-    background: none;
+    background: var(--background-color);
   }
   
   .str-chat__message-team-meta {
@@ -1106,7 +1134,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
-    color: #858688;
+    color: var(--text-color);;
     margin-top: 4px;
   }
   
@@ -1116,7 +1144,7 @@
     font-weight: 500;
     font-size: 11px;
     line-height: 120%;
-    color: #858688;
+    color: var(--text-color);;
     margin: 0;
     margin-right: 8px;
   }
@@ -1176,14 +1204,14 @@
   }
   
   .str-chat__message-team .str-chat__message-attachment-card--content {
-    background: #fff;
+    background: var(--background-color);
   }
   
   ul.str-chat__simple-reactions-list {
     display: flex;
     align-items: center;
     width: fit-content;
-    background: #ffffff;
+    background: var(--background-color);
     border: 1px solid #e9e9ea;
     box-sizing: border-box;
     border-radius: 50vw;
@@ -1230,7 +1258,7 @@
   }
   
   .str-chat__message-attachment-actions-button--default {
-    background: #fff;
+    background: var(--background-color);
     cursor: pointer;
   }
   
@@ -1261,7 +1289,7 @@
   }
   
   .str-chat__message-team--editing {
-    background: #e9e9ea;
+    background: var(--background-color);
     box-shadow: 0 0 11px 0 rgba(0, 0, 0, 0.06),
       inset 0 1px 0 0 var(--primary-color), inset 0 -1px 0 0 var(--primary-color);
     padding: 15px 20px;
@@ -1306,11 +1334,11 @@
   }
   
   .pinned-message {
-    background: #e6efff;
+    background: var(--background-color);
   }
   
   .unpinned-message {
-    background: #fff;
+    background: var(--background-color);
   }
   
   .str-chat__message-team-pin-indicator {
@@ -1334,7 +1362,7 @@
   }
   
   .str-chat__reaction-selector {
-    background: #ffffff;
+    background: var(--background-color);
     border: 1px solid #e9e9ea;
     box-sizing: border-box;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
@@ -1358,7 +1386,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background: #f7f6f8;
+    background: var(--background-color);
     padding: 15px 20px 28px;
     width: 100%;
   }
@@ -1381,7 +1409,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    background: #fff;
+    background: var(--background-color);
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
   }
@@ -1392,7 +1420,7 @@
     justify-content: space-evenly;
     height: 24px;
     width: 63px;
-    background: var(--primary-color);
+    background:var(--background-color);
     border-radius: 12px;
     margin-left: 8px;
   }
@@ -1403,16 +1431,16 @@
     font-weight: bold;
     font-size: 11px;
     line-height: 8px;
-    color: #ffffff;
+    color: var(--text-color);
   }
   
-  .team-message-input__bottom {
+  .team-message-input__bottom.light {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     width: 100%;
     height: 40px;
-    background: rgba(0, 0, 0, 0.05);
+    background: var(--background-color);
   }
   
   .team-message-input__button {
@@ -1429,7 +1457,6 @@
   
   .team-message-input__wrapper .str-chat__textarea textarea {
     display: flex;
-    background: #fff;
     border: none;
     outline: none;
     font-family: Helvetica Neue, sans-serif;
@@ -1444,11 +1471,12 @@
     border: none;
     outline: none;
     box-shadow: none;
-    background: #fff;
   }
+
+ 
   
   .team-message-input__wrapper .str-chat__textarea textarea::placeholder {
-    color: rgba(0, 0, 0, 0.2);
+    color: var(--text-color);
   }
   
   .team-message-input__icons {
@@ -1489,11 +1517,8 @@
     position: absolute;
     bottom: 112px;
     left: 20px;
+    color: var(--background-color);
     width: 338px;
-  }
-  
-  .emoji-mart .emoji-mart-emoji:focus {
-    outline: none;
   }
   
   div.rfu-dropzone:focus {
@@ -1513,7 +1538,7 @@
     z-index: 10;
     position: relative;
     width: 100%;
-    background: #fff;
+    background: var(--background-color);
     margin: 0;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
@@ -1538,21 +1563,29 @@
   }
   
   .str-chat__thread {
-    background: #fff;
+    background: var(--background-color);
     box-shadow: inset 1px 0px 0px rgba(0, 0, 0, 0.1);
     border-top-right-radius: 16px;
     border-bottom-right-radius: 16px;
   }
   
   .str-chat__thread-header {
+    background: var(--background-color);
+    color : var(--text-color);
     height: 62px !important;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   }
-  
+  .str-chat__input-flat .str-chat__textarea>textarea{
+    background-color: var(--special);
+  }
+
   .str-chat__thread-header-details {
     display: flex;
     height: 62px !important;
     align-items: center;
+  }
+  .team.str-chat .str-chat__thread{
+    background-color: var(--background-color);
   }
   
   .str-chat__thread-header-details strong {
@@ -1561,7 +1594,7 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: #2c2c30;
+    color: var(--text-color);
     margin-right: 10px;
   }
   
@@ -1599,6 +1632,8 @@
     font-size: 0;
     width: 100%;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--background-color);
+
   }
   
   .str-chat .str-chat__list--thread {
@@ -1643,7 +1678,7 @@
     font-weight: bold;
     font-size: 11px;
     line-height: 8px;
-    color: #ffffff;
+    color: var(--text-color);;
   }
   
   .thread-message-input__input {
@@ -1678,7 +1713,7 @@
   .thread-message-input__wrapper .str-chat__textarea textarea {
     display: flex;
     align-items: center;
-    background: #fff;
+    background: var(--background-color);
     border: none;
     outline: none;
     font-family: Helvetica Neue, sans-serif;
@@ -1690,7 +1725,7 @@
     border: none;
     outline: none;
     box-shadow: none;
-    background: #fff;
+    background: var(--background-color);
   }
   
   .thread-message-input__wrapper .str-chat__textarea textarea::placeholder {
@@ -1723,6 +1758,7 @@
   
   .emoji-mart .emoji-mart-emoji:focus {
     outline: none;
+    background-color: var(--background-color);
   }
   
   .team-channerl-header_menu-icon {
@@ -1754,7 +1790,14 @@
   
   .str-chat__input-flat {
     width: 100%;
+    background-color: var(--background-color);
     padding: 10px;
+  }
+
+  .str-chat__input-flat textarea {
+    background-color: red;
+
+    
   }
   
   @media screen and (max-width: 960px) {
