--- a/src/App.css
+++ b/src/App.css
@@ -1809,9 +1809,22 @@
   }
 
   .str-chat__input-flat textarea {
-    background-color: red;
+    background-color: var(--background-color);
 
     
+  }
+
+  .usersOnline{
+    position: absolute;
+    height: fit-content;
+    width: 200px;
+    background: var(--background-color);
+    border: 1px solid #e9e9ea;
+    box-sizing: border-box;
+    box-shadow: var(--background-color);
+    border-radius: 8px;
+    z-index: 100;
+    top: 35px;
   }
   
   @media screen and (max-width: 960px) {
